# adb-control

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
adb_control/: __init__.py
adb_control/core/: __init__.py  app_manager.py  base.py  connect_manager.py  device_manager.py  input_manager.py  media_manger.py  stream_manager.py  uiautomator_manager.py
adb_control/core/utils/: __init__.py  device_info.py  key_event.py  params.py
tests/: test_core.py
