[tool.poetry]
name = "adb-control"
version = "0.1.0"
description = ""
authors = ["yassine essadi <yasine.esadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
flask = "^3.1.0"

[tool.black]
exclude = '''
(?x)
(main\.py$)  # Ignore main.py file
'''

[tool.pre-commit]
config = ".pre-commit-config.yaml"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
